# agent-c

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  github-release.yml
examples/: test_app.c
include/aivory/: config.h  monitor.h  types.h
src/: agent.c
src/capture/: backtrace.c  signal_handler.c
src/transport/: websocket.c
